# swiss-cv-generator

./: .gitignore  README.md  backup_pdf_renderer_reportlab_20251014221541.py  check_sampling.py  cli.py  compress-pdfs.ps1  config.yaml  convert_html_to_pdf.py  debug_import.py  debug_pxmeta_output.txt  debug_runner.py  exporter.py  gitattributes  pxweb_raw_debug.txt  pyproject.toml  pyproject.toml.bak  pytest.ini  recovery_log.txt  requirements.txt  setup.py
backup/: swiss_cv_openai_client_backup_20251014223115.py
backup_exporters_20251014221307/: json_exporter.py  pdf_renderer.py
backup_src_20251014221307/: cli.py
data/: bfs_demographic_balance_by_canton_1971_2023.csv  cantons.csv  cantons.json  cantons_mvp.json  cantons_official.json  companies.csv  companies.json  names_it.csv  occupations.json
data_loaders/: swiss_data_loader.py
debug/: compute_stats.py  extract_pdf_text.py  fix_mojibake.py  openai_client_smoke.py  openai_usage_scan.txt  openai_usage_scan_after.txt  pdf_exporter_head.txt  pdf_extracted_text.txt  stats_summary.json
demo_final/: Anna_Meier_0.json  Stefan_Bianchi_1.json  Stefan_Bianchi_3.json  Stefan_Dubois_2.json  Stefan_Rossi_4.json
demo_final2/: Lukas_Rossi_4.json  Marco_Meier_3.json  Sofia_Bernard_2.json  Sofia_Dubois_0.json
demo_out/: Anna_Bianchi_0.json  Anna_Meier_0.json  Anna_Müller_0.json  Anna_Schmid_0.json  Lukas_Bianchi_0.json  Lukas_Bianchi_2.json  Lukas_Müller_0.json  Stefan_Rossi_1.json  Stefan_Schmid_0.json
demo_smallscale/: Anna_Rossi_0.json  Sofia_Bernard_1.json  Sofia_Schmid_2.json
demo_zurich/: Anna_Müller_3.html  Anna_Müller_3.json  Lukas_Bianchi_6.html  Lukas_Bianchi_6.json  Lukas_Rossi_4.html  Lukas_Rossi_4.json  Lukas_Schmid_7.html  Lukas_Schmid_7.json  Sofia_Dubois_5.html  Sofia_Dubois_5.json  Sofia_Meier_9.html  Sofia_Meier_9.json  Sofia_Müller_2.html  Sofia_Müller_2.json  Sofia_Schmid_8.html  Sofia_Schmid_8.json  Stefan_Bianchi_0.html  Stefan_Bianchi_0.json  Stefan_Rossi_1.html  Stefan_Rossi_1.json
exporters/: html_renderer.py  json_exporter.py  pdf_exporter.py  pdf_mvp.py  pdf_renderer.py  pdf_renderer_reportlab.py  pdf_renderer_reportlab.py.bak  pdf_reportlab_v2.py  pdf_weasy.py
generators/: summary_generator.py  swiss_persona.py  swiss_persona_generator.py
out_optimized/: Anna_Dubois_1.json  Lukas_Bianchi_2.json  Stefan_Dubois_0.json
out_optimized_sysfont/: Anna_Bianchi_0.json  Pierre_Müller_1.json  Sophie_Müller_2.json
scripts/: check_fonts.py  (+20 more)
(+1271 files in other folders)
