[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-cv-generator"
version = "0.2.0"
description = "Generate realistic, culturally authentic Swiss CVs"
authors = [{name = "Daniel Brody", email = "daniel.brody00@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["cv", "resume", "switzerland", "generator", "synthetic-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pydantic[email]>=2.0.0",
    "playwright>=1.40.0",
    "reportlab>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
swisscv-generate = "swisscv.cli.generate:main"
swisscv-validate = "swisscv.cli.validate:main"

[project.urls]
Homepage = "https://github.com/gsparty/swiss-cv-generator"
Repository = "https://github.com/gsparty/swiss-cv-generator"
Issues = "https://github.com/gsparty/swiss-cv-generator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swisscv = ["data/*.json", "data/*.csv", "templates/**/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=swisscv --cov-report=term-missing --cov-report=html"
